Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82389

QXmlStreamWriter missing raiseError() and similar functions

XMLWordPrintable

    • 8
    • 53622aca2 (dev)
    • Foundation Sprint 129, Foundation Sprint 130

      QXmlStreamReader::raiseError() is very useful when implementing custom XML readers, and makes it easy to check for both standard and custom errors with hasError() and errorString().

      Oddly enough, QXmlStreamWriter doesn't have the same functionality. It'd be nice if it did.

        For Gerrit Dashboard: QTBUG-82389
        # Subject Branch Project Status CR V

            magdalenas Magdalena Stojek
            phlucious Evon Silvia
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes